# whois-parser

./: .gitignore  README.md  benchmark_test.go  error.go  error_test.go  go.mod  go.sum  parser.go  parser_test.go  prepare.go  rule.go  struct.go  supported_test.go  util.go  util_test.go
testdata/alltlds/: README.md  SUPPORT.md  aaa_nic.aaa  aaa_nic.aaa.json  aarp_nic.aarp  aarp_nic.aarp.json  abb_nic.abb.json  abbott_nic.abbott  abbvie_nic.abbvie  abbvie_nic.abbvie.json  abc_nic.abc  abc_nic.abc.json  able_nic.able  able_nic.able.json  abogado_nic.abogado  abogado_nic.abogado.json  abudhabi_nic.abudhabi  abudhabi_nic.abudhabi.json  ac_google.ac.json  ac_nic.ac  academy_nic.academy  academy_nic.academy.json  accenture_nic.accenture  accountant_nic.accountant  accountant_nic.accountant.json  accountants_nic.accountants  aco_nic.aco  aco_nic.aco.json  actor_nic.actor  ads_nic.ads  ads_nic.ads.json  adult_nic.adult  adult_nic.adult.json  ae_nic.ae  ae_nic.ae.json  aeg_nic.aeg  aeg_nic.aeg.json  aero_google.aero  aero_google.aero.json  aero_nic.aero.json  (+1882 more)
testdata/noterror/: README.md  aaa_nic.aaa  aaa_nic.aaa.json  abb_nic.abb  abbott_nic.abbott.json  abbvie_nic.abbvie.json  able_nic.able  able_nic.able.json  ac_nic.ac.json  accenture_nic.accenture.json  accountant_nic.accountant  accountant_nic.accountant.json  accountants_nic.accountants.json  actor_nic.actor.json  aero_nic.aero  aetna_nic.aetna  aetna_nic.aetna.json  afl_nic.afl.json  agakhan_nic.agakhan  aig_nic.aig  aig_nic.aig.json  airtel_nic.airtel  akdn_nic.akdn.json  am_nic.am  amazon_nic.amazon  amazon_nic.amazon.json  americanexpress_nic.americanexpress  americanfamily_nic.americanfamily.json  amex_nic.amex  amfam_nic.amfam  anz_nic.anz  anz_nic.anz.json  apartments_nic.apartments  app_nic.app  arab_nic.arab  aramco_nic.aramco.json  archi_nic.archi  army_nic.army.json  art_nic.art  as_nic.as  (+740 more)
