Domain Name: nic.gn
Registry Domain ID: 5058-nicgn
Registrar WHOIS Server: https://whois.ande.gov.gn
Registrar URL: https://ande.gov.gn/dns-gn/
Updated Date: 
Creation Date: 2024-01-31T15:08:23Z
Registry Expiry Date: 2025-01-31T15:08:23Z
Registrar Registration Expiration Date: 2025-01-31T15:08:23Z
Registrar: Internal Registrars
Registrar Address: KIpé, Commune de Ratoma
Registrar Country: GN
Registrar Phone: +224 622298656
Registrar Fax: 
Registrar Abuse Contact Email: abuse@ande.gov.gn
Registrar Abuse Contact Phone: +224 622298656
Domain Status: active https://icann.org/epp#active
Name Server: ns2.siteground.net
Name Server: ns1.siteground.net
DNSSEC: unsigned
URL of the ICANN Whois Inaccuracy Complaint Form: https://www.icann.org/wicf/
>>> Last update of WHOIS database: 2024-12-04T22:10:35.111Z <<<

For more information on domain status codes, please visit https://icann.org/epp

TERMS OF USE: You are not authorized to access or query our WHOIS database through the use of electronic processes that are high-volume and automated.  This WHOIS database is provided by as a service to the internet community.

The data is for information purposes only. We do not guarantee its accuracy. By submitting a WHOIS query, you agree to abide by the following terms of use: You agree that you may use this Data only for lawful purposes and that under no circumstances will you use this Data to: (1) allow, enable, or otherwise support the transmission of mass unsolicited, commercial advertising or solicitations via e-mail, telephone, or facsimile; or (2) enable high volume, automated, electronic processes that apply to CoCCA it's members (or CoCCA or member computer systems). The compilation, repackaging, dissemination or other use of this Data is expressly prohibited.

